一日一回 discordにcompassのイベント情報を送信する

--- a/.github/workflows/batch.yml
+++ b/.github/workflows/batch.yml
@@ -1,9 +1,8 @@
 name: github action batch template
 
-on:
-  push
-  # schedule:
-  #   - cron: "0 */8 * * *" # 実行したい時間を指定(時間がutcなので注意)
+on: push
+  #schedule:
+  #  - cron: "0 */8 * * *" # 実行したい時間を指定(時間がutcなので注意)
 
 jobs:
   build:
