--- a/.github/workflows/batch.yml
+++ b/.github/workflows/batch.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Commit and push
         run: |
           git commit --allow-empty -m "chore: prevent automatic workflow stopping" -m "see: https://docs.github.com/en/actions/managing-workflow-runs/disabling-and-enabling-a-workflow"
-          git push
+          git push -f
       - name: batch
         env:
           ENCODED_ENV: ${{ secrets.ENCODED_ENV }}
