--- a/.github/workflows/golang-batch.yml
+++ b/.github/workflows/golang-batch.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Commit and push
         run: |
           git commit --allow-empty -m "chore: prevent automatic workflow stopping" -m "see: https://docs.github.com/en/actions/managing-workflow-runs/disabling-and-enabling-a-workflow"
-          git push
+          git push -f
       - name: batch
         env:
           ENCODED_GOLANG_ENV: ${{ secrets.ENCODED_GOLANG_ENV }}
