docker-compose → docker compose

--- a/.github/workflows/golang-batch.yml
+++ b/.github/workflows/golang-batch.yml
@@ -29,5 +29,5 @@ jobs:
         run: |
           touch .env.python
           echo -n ${ENCODED_GOLANG_ENV} | base64 -d > .env.golang
-          docker-compose run golang-batch ./main
+          docker compose run golang-batch ./main
           # docker-compose exec -T batch python main.py
