--- a/.github/workflows/batch.yml
+++ b/.github/workflows/batch.yml
@@ -29,6 +29,6 @@ jobs:
           touch .env.golang
           echo "python batch start" 
           echo -n ${ENCODED_ENV} | base64 -d > .env.python
-          docker-compose run python-batch python main.py
+          docker compose run python-batch python main.py
           # docker-compose exec -T batch python main.py
           echo "python batch end"
